manifest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  namespace: main-namespace
  labels:
    app: my-app-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app-server
  template:
    metadata:
      labels:
        app: my-app-server
    spec:
      containers:
        - name: my-app-server-nginx
          image: node-app:test
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
