manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: main-namespace
spec:
  selector:
    app: web-server
  ports:
    - name: http
      port: 3000
