manifest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: main-namespace
spec:
  ingressClassName: node-app
  rules:
    - host: web-server.npi-cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 3000
